--- a/mynotes/src/App.css
+++ b/mynotes/src/App.css
@@ -56,7 +56,7 @@ a {
   width: 100%;
   height: 100vh;
   color: var(--color-text);
-  background-color: black;
+  background-color: white;
   display: flex;
   align-items: center;
 }
