--- a/mynotes/src/App.css
+++ b/mynotes/src/App.css
@@ -7,7 +7,7 @@
   --color-text: #383a3f;
   --color-dark: #1f2124;
   --color-gray: #677;
-  --color-bg: #f3f6f9;
+  --color-bg: #f6a6a6;
   --color-light: #acb4bd;
   --color-lighter: #f9f9f9;
   --color-white: #fff;
@@ -43,7 +43,7 @@ body{
   line-height: 1.8em;
   font-weight: 400;
   font-size: 16px;
-  background-color: coral
+  background-color: white;
 }
 
 a {
@@ -57,7 +57,7 @@ a {
   width: 100%;
   height: 100vh;
   color: var(--color-text);
-  background-color: white;
+  background-color: crimson;
   display: flex;
   align-items: center;
 }
